# discordcut

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240905065607_add_indexes.sql
src/: main.rs
