[package]
name = "discordcut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
fake = "2.9.2"
